// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has no a11y issues 1`] = `
<Portal>
  <div
    className="DropdownContainer"
    data-test-id="cf-ui-dropdown-portal"
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    DropdownContainer
  </div>
</Portal>
`;

exports[`renders the component 1`] = `
<Portal>
  <div
    className="DropdownContainer"
    data-test-id="cf-ui-dropdown-portal"
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    DropdownContainer
  </div>
</Portal>
`;

exports[`renders the component as a submenu 1`] = `
<div
  className="extraClassName DropdownContainer"
  data-test-id="cf-ui-dropdown-portal"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  DropdownContainer
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<Portal>
  <div
    className="extraClassName DropdownContainer"
    data-test-id="cf-ui-dropdown-portal"
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    DropdownContainer
  </div>
</Portal>
`;
